--- a/operations/internal/frontend/media/delete-media.yaml
+++ b/operations/internal/frontend/media/delete-media.yaml
@@ -1,22 +1,12 @@
-openapi: 3.0.3
-info:
-  title: Delete Media
-  version: 1.0.0
-  description: Delete a media file.
-servers:
-  - url: /api
+---
 paths:
   /media/{id}:
     delete:
       summary: Delete a media file
       parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
+        - $ref: "../../../components/parameters.yaml#/id"
       responses:
-        '200':
+        "200":
           description: Deleted
-        '404':
-          description: Not found
+        "404":
+          $ref: "../../../components/responses.yaml#/NotFound"
