--- a/operations/internal/function/generate-text-content.yaml
+++ b/operations/internal/function/generate-text-content.yaml
@@ -1,17 +1,10 @@
-openapi: 3.0.0
-info:
-  title: Content Generation API
-  version: 1.0.0
+---
 paths:
   /generate-text-content:
     post:
       operationId: generateTextContent
       summary: Generate text content
       description: Generates text content based on a template and variable values.
-      tags:
-        - ContentGeneration
-      security:
-        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -30,7 +23,7 @@ paths:
                   additionalProperties:
                     type: string
       responses:
-        '200':
+        "200":
           description: Text content generated successfully
           content:
             application/json:
@@ -39,26 +32,9 @@ paths:
                 properties:
                   text:
                     type: string
-                    description: Generated text content
-                  hashtags:
-                    type: array
-                    items:
-                      type: string
-                  comment:
-                    type: string
-        '500':
-          description: Internal server error
+        "400":
+          description: Invalid request parameters
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-components:
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-# This operation file is now fully OpenAPI-compliant and self-contained.
+                $ref: "../../../schemas/common/error.yaml#/Error"
