--- a/operations/internal/frontend/media/upload-media.yaml
+++ b/operations/internal/frontend/media/upload-media.yaml
@@ -1,10 +1,4 @@
-openapi: 3.0.3
-info:
-  title: Upload Media
-  version: 1.0.0
-  description: Upload a new media file.
-servers:
-  - url: /api
+---
 paths:
   /media:
     post:
@@ -25,9 +19,9 @@ paths:
                 - file
                 - brandId
       responses:
-        '201':
+        "201":
           description: Media uploaded
           content:
             application/json:
               schema:
-                $ref: '../../../../../schemas/media.yaml#/MediaDocument'
+                $ref: "../../../schemas/media.yaml#/MediaDocument"
