--- a/schemas/base.yaml
+++ b/schemas/base.yaml
@@ -1,14 +1,12 @@
-openapi: 3.0.0
-components:
-  schemas:
-    base_model:
-      type: object
-      required:
-        - id
-        - metadata
-      properties:
-        id:
-          type: string
-          description: unique identifier for the record
-        metadata:
-          $ref: './common/metadata.yaml'
+---
+BaseModel:
+  type: object
+  required:
+    - id
+    - metadata
+  properties:
+    id:
+      type: string
+      description: unique identifier for the record
+    metadata:
+      $ref: "./common/metadata.yaml#/Metadata"
