--- a/schemas/common/social-account.yaml
+++ b/schemas/common/social-account.yaml
@@ -1,22 +1,24 @@
-type: object
-required:
-  - enabled
-  - username
-  - access_token
-properties:
-  enabled:
-    type: boolean
-    description: whether this social account is enabled
-  username:
-    type: string
-    description: username for the social account
-  access_token:
-    type: string
-    description: oauth access token
-  refresh_token:
-    type: string
-    description: oauth refresh token
-  expires_at:
-    type: string
-    format: date-time
-    description: token expiration timestamp
+---
+SocialAccount:
+  type: object
+  required:
+    - enabled
+    - username
+    - access_token
+  properties:
+    enabled:
+      type: boolean
+      description: whether this social account is enabled
+    username:
+      type: string
+      description: username for the social account
+    access_token:
+      type: string
+      description: oauth access token
+    refresh_token:
+      type: string
+      description: oauth refresh token
+    expires_at:
+      type: string
+      format: date-time
+      description: token expiration timestamp
