--- a/schemas/common/visual-style.yaml
+++ b/schemas/common/visual-style.yaml
@@ -1,67 +1,69 @@
-type: object
-properties:
-  font:
-    type: object
-    required:
-      - family
-      - size
-    properties:
-      family:
-        type: string
-        description: Font family for the overlay text (e.g., Arial).
-      size:
-        type: string
-        description: Font size (e.g., "32px").
-      weight:
-        type: string
-        enum: [normal, bold]
-        description: Font weight for the overlay text.
-      style:
-        type: string
-        enum: [normal, italic]
-        description: Font style for the overlay text.
-  color:
-    type: object
-    required:
-      - text
-      - background
-    properties:
-      text:
-        type: string
-        description: Color for the overlay text (e.g., "#000000").
-      background:
-        type: string
-        description: Background color for the overlay area (e.g., "#FFFFFF").
-      box:
-        type: string
-        description: Color of the text box background (e.g., "#000000").
-      outline:
-        type: string
-        description: Color for text outline (if supported).
-  outline:
-    type: object
-    properties:
-      color:
-        type: string
-        description: Color for text outline (if supported).
-      width:
-        type: integer
-        description: Width of the text outline in pixels (if supported).
-  alignment:
-    type: object
-    properties:
-      text_align:
-        type: string
-        enum: [left, center, right]
-        description: Text alignment for overlay text.
-  box:
-    type: object
-    properties:
-      color:
-        type: string
-        description: Color of the text box background (e.g., "#000000").
-      alpha:
-        type: integer
-        minimum: 0
-        maximum: 255
-        description: Alpha transparency for the text box background (0=transparent, 255=opaque).
+---
+VisualStyle:
+  type: object
+  properties:
+    font:
+      type: object
+      required:
+        - family
+        - size
+      properties:
+        family:
+          type: string
+          description: Font family for the overlay text (e.g., Arial).
+        size:
+          type: string
+          description: Font size (e.g., "32px").
+        weight:
+          type: string
+          enum: [normal, bold]
+          description: Font weight for the overlay text.
+        style:
+          type: string
+          enum: [normal, italic]
+          description: Font style for the overlay text.
+    color:
+      type: object
+      required:
+        - text
+        - background
+      properties:
+        text:
+          type: string
+          description: Color for the overlay text (e.g., "#000000").
+        background:
+          type: string
+          description: Background color for the overlay area (e.g., "#FFFFFF").
+        box:
+          type: string
+          description: Color of the text box background (e.g., "#000000").
+        outline:
+          type: string
+          description: Color for text outline (if supported).
+    outline:
+      type: object
+      properties:
+        color:
+          type: string
+          description: Color for text outline (if supported).
+        width:
+          type: integer
+          description: Width of the text outline in pixels (if supported).
+    alignment:
+      type: object
+      properties:
+        text_align:
+          type: string
+          enum: [left, center, right]
+          description: Text alignment for overlay text.
+    box:
+      type: object
+      properties:
+        color:
+          type: string
+          description: Color of the text box background (e.g., "#000000").
+        alpha:
+          type: integer
+          minimum: 0
+          maximum: 255
+          description: Alpha transparency for the text box background (0=transparent, 255=opaque).
